fix: fixed overflow bug

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -26,8 +26,7 @@ li a {
 }
 
 .grid {
-    max-width: 1200px;
-    max-width: 90%;
+    max-width: 95%;
     margin: 1rem auto;
     display: grid;
     gap: 1rem;
@@ -289,7 +288,7 @@ input:focus {
 footer {
     max-width: 100%;
     color: #fff;
-    max-height: 322px;
+    min-height: 322px;
     background: #000;
 }
 
@@ -297,7 +296,7 @@ footer {
     display: flex;
     /* border: 1px solid white; */
     /* place-items: center; */
-    padding-block: 3rem;
+    padding-block-start: 3rem;
     justify-content: space-between;
     max-width: 90%;
     margin: auto;
@@ -331,24 +330,14 @@ ul>h4 {
 
 
 
-
-
-
-
-
-
-
-
-
-
 @media (max-width:600px) {
     .container {
         display: flex;
         place-items: center;
         flex-direction: column;
-        max-width: 760px;
+        width: 100%;
         margin: auto;
-        overflow-x: hidden;
+        /* overflow-x: hidden; */
      
     }
     .header {
@@ -357,7 +346,7 @@ ul>h4 {
     }
     .places {
         border: 1px solid red;
-        max-width: 90%;
+        width: 100%;
         margin: auto;
     }
     .nav-places {
@@ -366,14 +355,18 @@ ul>h4 {
 
     .grid {
         display: flex;
-        margin: auto;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        border: 1px solid red;
+        margin: auto;        
         flex-direction: column;
     }
 
     main {
         flex-direction: column;
         gap: 2rem;
-        width: 100%;
+        width: 100%; 
         place-items: center;
         margin: auto;
     }
@@ -387,7 +380,6 @@ ul>h4 {
     .search {
         display: flex;
         flex-direction: column;
-        /* background: red; */
     }
 
     #srch {
@@ -398,9 +390,9 @@ ul>h4 {
 
         height: 44px;
         border-radius: 8px;
-        border: 1px solid #A3A3A3;
+        border: 1px solid #A3A3A3; 
 
-    }
+     }
 
     #srch-btn {
         position: relative;
@@ -426,14 +418,15 @@ ul>h4 {
     }
 
     main .herotext {
-        display: block;
+        display: block; 
     }
 
     .herotext p {
         margin-block: 1.5rem;
         font-size: 1rem;
     }
-
-
-
+    .footwrap {
+        flex-direction: column-reverse
+        ;
+    }
 }
